--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -997,6 +997,10 @@
     "Auth0LandingPage": {
         "Text": "[es]Please wait. You will be redirected to a destination soon..."
     },
+    "EmailVerifiedCallbackPage": {
+        "Header": "[es] Email verified",
+        "Text": "[es] Please wait. You will be redirected to a login page soon..."
+    },
     "Toolkit": {
         "Dialogs": {
             "JoinMailingList": {
