DDP-5583 add new SAC member

--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -543,6 +543,17 @@
                     "Alt": "Mariella G. Filbin photo"
                 },
                 {
+                    "Name": "Alexandra Golby, M.D.",
+                    "Affiliations": [
+                        "Dana-Farber Cancer Institute",
+                        "Brigham and Women’s Hospital",
+                        "Harvard Medical School"
+                    ],
+                    "Url": "https://golbylab.bwh.harvard.edu/",
+                    "Image": "assets/images/SAC-Golby.png",
+                    "Alt": "Alexandra Golby photo"
+                },
+                {
                     "Name": "Jason T. Huse, M.D., Ph.D.",
                     "Affiliations": [
                         "University of Texas MD Anderson Cancer Center"
