DDP-5583 brain rename: fix typo

--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -294,7 +294,7 @@
                 ]
             },
             {
-                "Title": "I/my child have been diagnosed with brain tumor",
+                "Title": "I/my child have been diagnosed with a brain tumor",
                 "Items": [
                     {
                         "Question": "How does this project work?",
