Add translations for ModalActivityBlock in ddp-osteo

--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -727,6 +727,14 @@
         "TooltipAlt": "Information",
         "Validators": {
             "DateNavyValidationRule": "Entered date is invalid"
+        },
+        "ModalActivityBlock": {
+            "NumQuestionsAnswered": "{{number}} questions answered",
+            "EditButton": "Edit",
+            "DeleteButton": "Delete",
+            "SaveButton": "Save",
+            "ConfirmDeletion": "Are you sure you want to delete this information?",
+            "CancelButton": "Cancel"
         }
     }
 }
