--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -534,6 +534,10 @@
         }
     },
     "SDK": {
+        "ModalActivityBlock": {
+          "ConfirmDeletion": "Are you sure you want to delete \nthis information?",
+          "NumQuestionsAnswered": "{{number}} questions answered"
+        },
         "FinishButton": "Finish",
         "SubmitButton": "Submit",
         "CloseButton": "Close",
@@ -543,6 +547,8 @@
         "PreviousButton": "Back",
         "SavingButton": "Saving",
         "EditButton": "View/Edit",
+        "SaveButton": "Save",
+        "DeleteButton": "Delete",
         "ReviewButton": "View",
         "AgreeButton": "I agree",
         "NotAgreeButton": "I am not ready to agree",
