DDP-5691: Redirect users to sign in page upon logging out

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -22,6 +22,9 @@
   "pages": {
     "welcome": "Welcome Page"
   },
+  "RedirectToLogin": {
+    "Text": "Please wait until you are redirected"
+  },
   "WorkflowProgress": {
     "AboutYou": "About You",
     "LegacySurvey": "Legacy Survey",
