--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -174,6 +174,11 @@
                         "Website": "https://www.cern-foundation.org/",
                         "Logo": "assets/images/CERN-logo.png",
                         "Alt": "CERN Foundation logo"
+                    },
+                    {
+                        "Website": "http://www.curethekids.org/",
+                        "Logo": "assets/images/PBTF-logo.png",
+                        "Alt": "Pediatric Brain Tumor Foundation logo"
                     }
                 ]
             ],
