--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -174,6 +174,11 @@
                         "Website": "https://www.cern-foundation.org/",
                         "Logo": "assets/images/CERN-logo.png",
                         "Alt": "CERN Foundation logo"
+                    },
+                    {
+                        "Website": "http://www.curethekids.org/",
+                        "Logo": "assets/images/PBTF-logo.png",
+                        "Alt": "Pediatric Brain Tumor Foundation logo"
                     }
                 ]
             ],
@@ -229,7 +234,7 @@
                         "Question": "How has the brain tumor community been involved in the design of this project?",
                         "Paragraphs": [
                             "We have worked closely with patients, parents, and patient advocates within the brain tumor community from the beginning of this project through its design and implementation. The community has been involved in all aspects including concept, goals, messaging, forms, and the design of this website. We have also worked with a Scientific Advisory Council made up of leading researchers working in brain tumors.",
-                            "We're proud to have our Advocacy Partners TargetCancer Foundation, American Brain Tumor Association, National Brain Tumor Society, Oligo Nation, Dragon Master Foundation, and OurBrainBank."
+                            "We're proud to have our Advocacy Partners TargetCancer Foundation, American Brain Tumor Association, National Brain Tumor Society, Oligo Nation, Dragon Master Foundation, OurBrainBank, and Pediatric Brain Tumor Foundation."
                         ]
                     },
                     {
