Rare-X: Add terms and condition page template content

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -283,6 +283,7 @@
         },
         {
           "Title": "GENERAL",
+          "SkipCount": true,
           "Paragraphs": [
             {
               "Title": "<span class=\"underline\">Entire Agreement</span>",
