--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -446,6 +446,13 @@
         "MedicalRelease": "Medical Release",
         "Questionnaire": "Questionnaire"
     },
+    "ThankYouFamilyHistory": {
+        "Title": "Thank you for working with us to make\n this research possible.",
+        "Subtitle": "If you’d like to update or review your answers to this survey, you can access it\n from your dashboard at any time.",
+        "ReturnToDashboard": "Return to dashboard",
+        "FirstImage": "First image",
+        "SecondImage": "Second image"
+    },
     "Toolkit": {
         "Dashboard": {
             "Title": "My Dashboard"
