RGP: Add study messages component

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1047,6 +1047,18 @@
     },
     "DashboardPage": {
         "Title": "Dashboard",
+        "StudyMessages": {
+          "Title": "Study Messages",
+          "Header": {
+            "Date": "Date",
+            "Title": "Title",
+            "Description": "Description"
+          },
+          "Actions": {
+            "ShowMore": "Show more",
+            "ShowLess": "Show less"
+          }
+        },
         "UserActivities": {
           "Title": "Study Forms",
           "Header": {
