Rare-X: Add "I Understand" button in consents

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -359,6 +359,7 @@
     "ContinueButton": "Continue",
     "SubmitButton": "Submit",
     "NextButton": "Next",
+    "IUnderstandButton": "I Understand",
     "CloseButton": "Close",
     "PreviousButton": "Back",
     "SavingButton": "Saving",
