Rare-X: Adjust styling for participants list

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -308,6 +308,9 @@
       ]
     }
   },
+  "ParticipantsList": {
+    "NewParticipant": "New Participant"
+  },
   "Toolkit": {
     "Password": {
       "Title": "Please enter the password",
