--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -309,7 +309,9 @@
     }
   },
   "ParticipantsList": {
-    "NewParticipant": "New Participant"
+    "Title": "Your Participants",
+    "NewParticipant": "New Participant",
+    "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
   "Toolkit": {
     "Password": {
