Rare-X: Fix activity editing

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -308,6 +308,9 @@
       ]
     }
   },
+  "Dashboard": {
+    "Title": "My Dashboard"
+  },
   "ParticipantsList": {
     "Title": "Your Participants",
     "NewParticipant": "New Participant",
