Add Family History activity to top-level progress indicator in Osteo study

--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -444,7 +444,8 @@
         "AboutYou": "About You",
         "Consent": "Consent Form",
         "MedicalRelease": "Medical Release",
-        "Questionnaire": "Questionnaire"
+        "Questionnaire": "Questionnaire",
+        "FamilyHistory": "Family History"
     },
     "ThankYouFamilyHistory": {
         "Title": "Thank you for working with us to make\n this research possible.",
