--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -316,6 +316,13 @@
     "NewParticipant": "New Participant",
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
+  "LoginLandingPage": {
+    "Text": "Please wait until you are redirected"
+  },
+  "ErrorPage": {
+    "Title": "Something went wrong",
+    "Text": "Something went wrong on our side, please try again later."
+  },
   "Toolkit": {
     "Password": {
       "Title": "Please enter the password",
