DDP-5816 family history: indicate all questions were completed

--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -740,6 +740,7 @@
         },
         "ModalActivityBlock": {
             "NumQuestionsAnswered": "{{number}} questions answered",
+            "Complete": "Complete",
             "EditButton": "Edit",
             "DeleteButton": "Delete",
             "SaveButton": "Save",
