--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -316,6 +316,10 @@
     "NewParticipant": "New Participant",
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
+  "ParticipantDeletionDialog": {
+    "Title": "Confirmation",
+    "Text": "Are you sure you want to delete this participant? All data entered for this participant will be cleared."
+  },
   "LoginLandingPage": {
     "Text": "Please wait until you are redirected"
   },
@@ -341,7 +345,9 @@
       "Submit": {
         "Title": "Submit",
         "AriaLabel": "Submit button"
-      }
+      },
+      "Yes": "Yes",
+      "No": "No"
     },
     "Navigation": {
       "Dashboard": "Dashboard"
